<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Main_Chamber" Id="{c20cea82-c8af-4ed8-b93c-47972a2f58aa}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
(******************************************************************************************************)
(*MAIN CHAMBER*) 
(******************************************************************************************************)
	//TURBO PUMPS
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[R20_DRL_03_E5_EL1004]^Channel 2^Input;
								 .i_xFaultNC		:=	TIIB[R20_DRL_03_E5_EL1004]^Channel 1^Input;
								 .q_RunDO			:=	TIIB[R20_DRL_03_E7_EL2794]^Channel 2^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:MC:PTM:01'}
	DREAM_MC_PTM_01 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[R20_DRL_03_E5_EL1004]^Channel 4^Input;
								 .i_xFaultNC		:=	TIIB[R20_DRL_03_E5_EL1004]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[R20_DRL_03_E7_EL2794]^Channel 4^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:MC:PTM:02'}
	DREAM_MC_PTM_02 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[K4S8_DRL_04_E3_EL1004]^Channel 2^Input;
								 .i_xFaultNC		:=	TIIB[K4S8_DRL_04_E3_EL1004]^Channel 1^Input;
								 .q_RunDO			:=	TIIB[K4S8_DRL_04_E5_EL2794]^Channel 1^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:MC:PTM:03'}
	DREAM_MC_PTM_03 : FB_PTM_TurboDrive;
	
	//HOT CATHODE GUAGE 
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[R03_DRL_01_E3_EL3174-0002]^AI Standard Channel 1^Value;
								 .i_xHV_ON			:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 1^Input;
								 .i_xCH2_SEL		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 2^Input;
								 .i_xERR_CH1		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 3^Input;
								 .i_xERR_CH2		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 4^Input;
								 .q_xHV_DIS_CH1		:=	TIIB[R03_DRL_01_E2_EL2624]^Channel 1^Output;
								 .q_xHV_DIS_CH2		:=	TIIB[R03_DRL_01_E2_EL2624]^Channel 2^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:MC:GHC'}
	DREAM_MC_GHC : FB_IE514;

	//GPI
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 1^Value'}
	{attribute 'pytmc' := 'pv: DREAM:MC:GPI:01'}
	DREAM_MC_GPI_01 : FB_MKS275;

(******************************************************************************************************)
(*CAT1 ISOlATION VALVE*) 
(******************************************************************************************************)
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[K4S8_DRL_04_E1_EL1004]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[K4S8_DRL_04_E1_EL1004]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[K4S8_DRL_04_E2_EL2004]^Channel 1^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:CAT1:VRC:01'}
	DREAM_CAT1_VRC_01: FB_VGC;

(******************************************************************************************************)
(*CATCHER 1*) 
(******************************************************************************************************)
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[K4S8_DRL_04_E3_EL1004]^Channel 4^Input;
								 .i_xFaultNC		:=	TIIB[K4S8_DRL_04_E3_EL1004]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[K4S8_DRL_04_E5_EL2794]^Channel 2^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:CAT1:PTM:01'}
	DREAM_CAT1_PTM_01 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 2^Value;
									 .i_xHV_ON			:=	TIIB[K4S8_DRL_04_E15_EL1084]^Channel 1^Input;
									 .q_xHV_DIS			:=	TIIB[K4S8_DRL_04_E14_EL2624]^Channel 1^Output
	'}			 
	{attribute 'pytmc' :=' pv: DREAM:CAT1:GHC:01'}
	DREAM_CAT1_GHC_01 : FB_IMG401;

(******************************************************************************************************)
(*CATCHER 2*) 
(******************************************************************************************************)
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[K4S8_DRL_04_E4_EL1004]^Channel 2^Input;
								 .i_xFaultNC		:=	TIIB[K4S8_DRL_04_E4_EL1004]^Channel 1^Input;
								 .q_RunDO			:=	TIIB[K4S8_DRL_04_E5_EL2794]^Channel 3^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:CAT2:PTM:01'}
	DREAM_CAT2_PTM_01 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 3^Value;
									 .i_xHV_ON			:=	TIIB[K4S8_DRL_04_E15_EL1084]^Channel 2^Input;
									 .q_xHV_DIS			:=	TIIB[K4S8_DRL_04_E14_EL2624]^Channel 2^Output
	'}			 
	{attribute 'pytmc' :=' pv: DREAM:CAT1:GHC:01'}
	DREAM_CAT2_GHC_01 : FB_IMG401;

(******************************************************************************************************)
(*Serial Interface*) 
(******************************************************************************************************)
	(*Leybold TD20 serial*)
	stTD20_RBK_DREAM_MC_PTM_01       : ST_TD20Status;
	fbTD20Com_DREAM_MC_PTM_01        : FB_OERLIKON_TD20_COM;
	
	stTD20_RBK_DREAM_MC_PTM_02       : ST_TD20Status;
	fbTD20Com_DREAM_MC_PTM_02        : FB_OERLIKON_TD20_COM;
	
	(*Leybold TD400 serial*)
	stTD400_RBK_DREAM_MC_PTM_03      : ST_TD20Status;
	fbTD400Com_DREAM_MC_PTM_03       : FB_OERLIKON_TD20_COM;
	
	stTD400_RBK_DREAM_CAT1_PTM_01    : ST_TD20Status;
	fbTD400Com_DREAM_CAT1_PTM_01     : FB_OERLIKON_TD20_COM;
	
	stTD400_RBK_DREAM_CAT2_PTM_01    : ST_TD20Status;
	fbTD400Com_DREAM_CAT2_PTM_01     : FB_OERLIKON_TD20_COM;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>